[tool.poetry]
name = "birthday"
version = "0.1.0"
description = ""
authors = ["Brandon Corfman <bcorfman@fastmail.fm>"]

[tool.poetry.dependencies]
python = "^3.8"
twilio = "^7.3.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
