[project]
name = "birthday_greetings"
version = "0.2"
description = "A solution to the kata at https://codingdojo.org/kata/birthday-greetings/"
authors = [
    {name = "Brandon Corfman", email = "bcorfman@fastmail.fm"},
]
dependencies = [
    "python-dateutil>=2.8.2"]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/bcorfman/birthday_greetings"

[project.optional-dependencies]
[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=6.2.5",
    "pytest-asyncio>=0.16.0",
    "pytest-freezegun>=0.4.2",
]

[tool.pytest.ini_options]
log_file = "pytest.log"
log_file_level = "ERROR"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
